Refactor `PdagPagIda` for PAG enhancements and code clarity:
- Added incremental FCI propagation after each local orientation.
- Refined IDA amenability checks with updated graph refinement logic.
- Improved `getTotalEffects` and `getAbsTotalEffects` methods for sorting and accuracy.
- Enhanced Javadocs and formatted code for better readability.